force-app/main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <label>Service</label>
    <nameField>
        <label>Service 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>