force-app/main/default/objects/Service__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>상세 내용</description>
    <inlineHelpText>예: 엔진오일 교체 후 누유 점검 완료</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>