force-app/main/default/objects/Service__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>이 정비와 연관된 Case</description>
    <inlineHelpText>이 정비와 연결된 Case를 선택하세요.</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Siervices</relationshipLabel>
    <relationshipName>Siervices</relationshipName>
    <type>Lookup</type>
</CustomField>