force-app/main/default/objects/Service__c/fields/Repair_Shop__c.field-meta.xml
<CustomField>
    <fullName>Repair_Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>이 서비스를 수행한 정비소</description>
    <inlineHelpText>서비스가 수행된 정비소를 선택하세요.</inlineHelpText>
    <label>Repair Shop</label>
    <referenceTo>Repair_Shop__c</referenceTo>
    <relationshipLabel>Siervices</relationshipLabel>
    <relationshipName>Siervices</relationshipName>
    <type>Lookup</type>
</CustomField>