force-app/main/default/objects/Service__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>차량의 정비가 실제로 수행된 날짜</description>
    <inlineHelpText>차량이 정비를 받은 실제 날짜를 선택해 주세요.</inlineHelpText>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>