force-app/main/default/objects/Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>서비스 유형</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>정기점검</fullName>
            </value>
            <value>
                <fullName>긴급정비</fullName>
            </value>
            <value>
                <fullName>일반정비</fullName>
            </value>
            <value>
                <fullName>보증수리</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>