force-app/main/default/objects/Service__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>정비가 수행되는 고객 차량을 지정</description>
    <inlineHelpText>정비를 진행한 차량을 선택하세요.</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Siervices</relationshipLabel>
    <relationshipName>Siervices</relationshipName>
    <type>Lookup</type>
</CustomField>