force-app/main/default/objects/Service__c/recordTypes/Customization.recordType-meta.xml
<RecordType>
    <fullName>Customization</fullName>
    <active>true</active>
    <label>Customization</label>
</RecordType>